[package]
name = "link"
version = "0.1.5"
authors = ["jakeroggenbuck <jakeroggenbuck2@gmail.com>"]
edition = "2018"

[dependencies]
jsonwebtoken = "=7.2"
rocket = "0.4.8-dev"
dotenv = "0.15.0"
sha2 = "0.9.1"
serde = { version = "1.0", features = ["derive"] }
postgres = { version = "0.15", features = ["with-chrono"] }
diesel = { version = "1.4.4", features = ["postgres"] }

[dependencies.rocket_contrib]
version = "0.4.9"
default-features = false
features = ["diesel_postgres_pool"]
